...
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="||"
                android:onClick="onClickPauseButton"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
...
                    android:text="rotate"
                    android:onClick="onClickRotateRightButton"/>
            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="drop"
                android:onClick="onClickDropButton"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>

